--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <title>Book Reader</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/BookReader-favicon.svg/48px-BookReader-favicon.svg.png">
     <link rel="stylesheet" href="https://tools-static.wmflabs.org/fontcdn/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://tools-static.wmflabs.org/cdnjs/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css">
   </head>
   <body>
     <noscript>
